--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "type": "module",
   "dependencies": {
     "cron": "^1.8.2",
+    "moment": "^2.29.1",
+    "nconf": "^0.11.3",
     "orionx-sdk": "^1.3.9",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {},
   "scripts": {
